--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <a routerLink="/task-1" class="nav-link">Task 1</a>
+<a routerLink="/task-2" class="nav-link">Task 2</a>
 
 <router-outlet></router-outlet>
