--- a/src/app/task-1/task-1.component.html
+++ b/src/app/task-1/task-1.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" class="form">
+<form [formGroup]="form" class="form" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <input type="text" formControlName="text" class="form-control" />
     <div *ngIf="form.controls['text'].invalid && form.controls['text'].touched">
