--- a/src/app/task-2/task-2.component.html
+++ b/src/app/task-2/task-2.component.html
@@ -5,19 +5,19 @@
         <div class="form-group">
           <label>
             Text:
-            <input formControlName="text" class="form-control" />
+            <app-input formControlName="text"></app-input>
           </label>
         </div>
         <div class="form-group">
           <label>
             Select:
-            <input formControlName="select" class="form-control" />
+            <app-input formControlName="select" type="select"></app-input>
           </label>
         </div>
         <div class="form-group">
           <label>
             Date:
-            <input formControlName="date" class="form-control" />
+            <app-input formControlName="date" type="date"></app-input>
           </label>
         </div>
         <div class="form-group">
