--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/task-1" class="nav-link">Task 1</a>
-<a routerLink="/task-3" class="nav-link">Task 3</a>
+<a routerLink="/task-1" class="nav-link">Inputs</a>
+<a routerLink="/task-3" class="nav-link">Summary</a>
 
 <router-outlet></router-outlet>
